# FlexNoC_AF

./: CMakeLists.txt  Dockerfile  FindBZip2.cmake  FindBoost.cmake  FindGTest.cmake  FindZLIB.cmake  Findantlr4-runtime.cmake  Findfmt.cmake  Findlibbacktrace.cmake  LICENSE  README.md  conanfile.py  graph_info.json
.github/workflows/: docker.yml
IncludeModel/: PriorityModel.h  RoundRobinModel.h  SingleQueue.h  UpdateNodeQueue.h  WaitingTime.h  findQueue.h  getUtils.h  setNetwork.h  setNetworkPrimitives.h  updateProcess.h
SrcModel/: .RoundRobinModel.cpp.swp  .updateProcess.cpp.swp  PriorityModel.cpp  RoundRobinModel.cpp  SingleQueue.cpp  UpdateNodeQueue.cpp  WaitingTime.cpp  findQueue.cpp  getUtils.cpp  setNetwork.cpp  setNetworkPrimitives.cpp  updateProcess.cpp
auto_generate/: .autoGenerateMeshFile.h.swp  SplitProbabilityGenerate.cpp  SplitProbabilityGenerate.h  autoGenerateMeshFile.h  config_file_reader.h  dot_file_generator.h
include/: .Primitive.h.swp  .Queue.h.swp  Arbiter.h  EdgeVisitor.h  Hybrid.h  Injector.h  Junction.h  MakeConnection.h  Mapping.h  Node.h  NodeVisitor.h  Primitive.h  Priority.h  Queue.h  RoundRobin.h  Server.h  Sink.h  Split.h  TypeCheckVisitor.h  defines.h  dot_compiler.h  network.h  node_factory.h
iso/: .RunRegular.cpp.swp  .RundotFile.cpp.swp  .main.cpp.swp  1  CMakeLists.txt  RunRegular.cpp  RundotFile.cpp  main.cpp
lang/: .DOTBaseVisitor.h.swp  DOT.g4  DOT.interp  DOT.tokens  DOTBaseListener.h  DOTBaseListener.java  DOTBaseVisitor.cpp  DOTBaseVisitor.h  DOTLexer.cpp  DOTLexer.h  DOTLexer.interp  DOTLexer.java  DOTListener.h  DOTListener.java  DOTParser.cpp  DOTParser.h  DOTParser.java  DOTVisitor.cpp  DOTVisitor.h
src/: .Hybrid.cpp.swp  .MakeConnection.cpp.swp  .Split.cpp.swp  .node_factory.cpp.swo  .node_factory.cpp.swp  Arbiter.cpp  Hybrid.cpp  Injector.cpp  Junction.cpp  MakeConnection.cpp  Node.cpp  Priority.cpp  Queue.cpp  RoundRobin.cpp  Server.cpp  Sink.cpp  Split.cpp  TypeCheckVisitor.cpp  defines.cpp  dot_compiler.cpp  node_factory.cpp
test/: .demo4.dot.swp  .hybrid1.dot.swp  .mesh2.dot.swm  .mesh2.dot.swo  .mesh2.dot.swp  CMakeCache.txt  CMakeLists.txt  busFabric.dot  busFabricExp1.dot  busFabricExp2.dot  busFabricExp3.dot  bus_fabric.dot  demo.dot  demo1.dot  demo2.dot  demo3.dot  dsl_valid_syntax_test.cpp  goldenlog1.txt  goldenlog10.txt  goldenlog2.txt  goldenlog3.txt  goldenlog4.txt  goldenlog5.txt  goldenlog6.txt  goldenlog7.txt  goldenlog8.txt  goldenlog9.txt  graph1.dot  graph10.dot  graph11.dot  graph2.dot  graph3.dot  graph4.dot  graph5.dot  graph6.dot  graph7.dot  graph8.dot  graph9.dot  graphtest.dot  hybrid1.dot  (+8 more)
